--- a/app/src/css/aperture.less
+++ b/app/src/css/aperture.less
@@ -38,11 +38,12 @@
 }
 
 #shelf.aperture-off {
-	transform: translateY(108px); /*TODO toolbar height + nav height*/
-	-webkit-transform: translateY(108px);
-	-moz-transform: translateY(108px);
-	-ms-transform: translateY(108px);
-	-o-transform: translateY(108px);
+	transform: translateY(116px); /*TODO toolbar height + nav height*/
+	-webkit-transform: translateY(116px);
+	/*@IFDEF PHONEGAP*/
+	transform: translateY(116px+@pg-offset); /*TODO toolbar height + nav height*/
+	-webkit-transform: translateY(116px+@pg-offset);
+	/*@ENDIF*/
 }
 
 
