--- a/app/src/css/foundry.css
+++ b/app/src/css/foundry.css
@@ -29,12 +29,14 @@
   -webkit-transform: translateY(88px);
 }
 #shelf.aperture-off {
-  transform: translateY(108px);
+  transform: translateY(116px);
   /*TODO toolbar height + nav height*/
-  -webkit-transform: translateY(108px);
-  -moz-transform: translateY(108px);
-  -ms-transform: translateY(108px);
-  -o-transform: translateY(108px);
+  -webkit-transform: translateY(116px);
+  /*@IFDEF PHONEGAP*/
+  transform: translateY(132px);
+  /*TODO toolbar height + nav height*/
+  -webkit-transform: translateY(132px);
+  /*@ENDIF*/
 }
 #shelf.aperture-half {
   transform: translateY(50%) translateZ(0px);
@@ -490,6 +492,9 @@ nav ul {
   line-height: 48px;
   outline: none;
   border: none;
+  /*@IFDEF PHONEGAP*/
+  top: 64px;
+  /*@ENDIF*/
 }
 .search-btn {
   position: absolute;
