--- a/app/src/css/nav.less
+++ b/app/src/css/nav.less
@@ -208,6 +208,9 @@ nav ul {
 	line-height: 48px;
 	outline: none;
 	border: none;
+	/*@IFDEF PHONEGAP*/
+	top: 48px+@pg-offset;
+	/*@ENDIF*/
 }
 
 .search-btn {
